--- a/ansible/roles/wordpress-namespace/tasks/backup-wordpresssites.yml
+++ b/ansible/roles/wordpress-namespace/tasks/backup-wordpresssites.yml
@@ -65,7 +65,7 @@
                 serviceAccountName: backup-wordpresssite
                 containers:
                   - name: backup-wordpresssite-cron
-                    image: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-s3:feature-wpsites-backup-014"
+                    image: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-s3:2025-293"
                     imagePullPolicy: IfNotPresent
                     command: ["/bin/bash"]
                     args: ["/wordpresssites-backup.sh"]
