--- a/ansible/roles/wordpress-namespace/tasks/restore-sites-prod-to-test.yml
+++ b/ansible/roles/wordpress-namespace/tasks/restore-sites-prod-to-test.yml
@@ -67,7 +67,7 @@
                 serviceAccountName: restore-sites-prod-to-test
                 containers:
                   - name: restore-sites-from-prod-to-test-cron
-                    image: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-s3:feature-wpsites-backup-014"
+                    image: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-s3:2025-293"
                     command: ["/bin/bash"]
                     args: ["/restore_sites_prod_to_test.sh"]
                     resources:
