--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -52,7 +52,7 @@ RUN set -e -x; case $WORDPRESS_VERSION in                                 \
 COPY wp-sbom.sh /tmp
 RUN chmod +x /tmp/wp-sbom.sh
 RUN set -e -x;  \
-      WP_CONTENT_DIR=/wp/wp-content /tmp/wp-sbom.sh > /wp/wp-admin/wordpress_sbom.txt
+      WP_CONTENT_DIR=/wp/wp-content /tmp/wp-sbom.sh > /wp/wp-bom.yaml
 
 RUN rm /tmp/*.patch* /tmp/*.sh
 
