[feature] Redirect all `wp-json` to `php-fpm`
This solve the case where the API version get a dot in it, such in 
`wp-test-kiwi.epfl.ch/wp-json/activitypub/1.0/inbox`.

--- a/docker/wordpress-nginx/wordpress_fastcgi.conf
+++ b/docker/wordpress-nginx/wordpress_fastcgi.conf
@@ -28,3 +28,6 @@ location ~ ^[^.]*$ {
 location ~ \.php$ {
   fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
 }
+location ~ /wp-json/ {
+  fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+}
