[feature](WIP) Redirect `.well-known` to `php-fpm`
Note that we have an explicite route for this path in prod, serving 
`security.txt` and `gpg_key.txt`.

--- a/docker/wordpress-nginx/wordpress_fastcgi.conf
+++ b/docker/wordpress-nginx/wordpress_fastcgi.conf
@@ -31,3 +31,6 @@ location ~ \.php$ {
 location ~ /wp-json/ {
   fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
 }
+location ~ /\.well-known/ {
+  fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+}
