--- a/ansible/roles/wordpress-namespace/vars/cloudflare-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/cloudflare-vars.yml
@@ -1,4 +1,4 @@
-_cloudflare_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/cloudflare-secrets.yml') | from_yaml }}"
+_cloudflare_secrets: "{{ lookup('pipe', 'keybase fs read /keybase/team/epfl_wp_prod/cloudflare-secrets.yml') | from_yaml }}"
 cloudflare_api_url: "https://api.cloudflare.com/client/v4"
 cloudflare_api_zone_id: "{{ _cloudflare_secrets.API_ZONE_ID }}"
 cloudflare_api_tls_settings_token: "{{ _cloudflare_secrets.API_TLS_SETTINGS_TOKEN }}"
