--- a/ansible/roles/wordpress-namespace/vars/s3-secrets-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/s3-secrets-vars.yml
@@ -16,8 +16,8 @@ eyaml_keys:
   priv: "/keybase/team/epfl_wp_test/eyaml-privkey.pem"
   pub: "{{ playbook_dir }}/eyaml/epfl_wp_test.pem"
 
-_epfl_migration_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/os3-s3-credentials.yaml') | from_yaml }}"
-_backup_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/os4-s3-credentials.yaml') | from_yaml }}"
+_epfl_migration_secrets: "{{ lookup('pipe', 'keybase fs read /keybase/team/epfl_wp_prod/os3-s3-credentials.yaml') | from_yaml }}"
+_backup_secrets: "{{ lookup('pipe', 'keybase fs read /keybase/team/epfl_wp_prod/os4-s3-credentials.yaml') | from_yaml }}"
 
 s3_epfl_migration_credentials:
   bucket_name: "{{ _epfl_migration_secrets.bucket_name }}"
