[feature] Modify config of menu-api

--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -22,6 +22,7 @@
           LOCAL_ENV: false
           LABS_LINK_URL_FR: "https://{{ _wp_host_base_url }}/labs/fr/laboratoires/"
           LABS_LINK_URL_EN: "https://{{ _wp_host_base_url }}/labs/en/laboratories/"
+          ROOT_LINK_URL: "https://{{ _wp_host_base_url }}/"
           ASSOC_BREADCRUMB_EN: |
             https://{{ _wp_host_base_url }}/campus/en/campusenglish/
             https://{{ _wp_host_base_url }}/campus/associations/en/student-associations/
