--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -119,6 +119,17 @@
     - wp
     - wp.cron
 
+- name: "sitemap"
+  include_tasks:
+    file: sitemap.yml
+    apply:
+      tags:
+        - wp
+        - wp.sitemap
+  tags:
+    - wp
+    - wp.sitemap
+
 - name: "WordPress operator"
   include_tasks:
     file: wp-operator.yml
