--- a/ansible/roles/wordpress-namespace/tasks/sitemap.yml
+++ b/ansible/roles/wordpress-namespace/tasks/sitemap.yml
@@ -1,40 +1,35 @@
 - include_vars: ../../../vars/quay-vars.yml
   tags: always
 
-- name: CronJob/wp-cron
+- name: CronJob/sitemap
   kubernetes.core.k8s:
     state: present
     definition:
       apiVersion: batch/v1
       kind: CronJob
       metadata:
-        name: wp-cron
+        name: sitemap
         namespace:  "{{ inventory_namespace }}"
       spec:
-        schedule: "7 * * * *"
+        schedule: "15 7 * * *"
         timeZone: "Europe/Zurich"
         jobTemplate:
           spec:
             template:
               metadata:
                 labels:
-                  app: wp-cron
+                  app: sitemap
               spec:
                 # The serviceAccount is managed by the OLM controller in wp-operator/operator-namespaced.yaml,
                 # because it requires rights that a human operator doesn't have
                 serviceAccountName: wp-cron
                 containers:
-                  - name: wp-cron
+                  - name: sitemap
                     image: "quay-its.epfl.ch/svc0041/wp-cron:{{ _wp_cron_tag }}"
                     imagePullPolicy: Always
-                    env:
-                      - name: K8S_NAMESPACE
-                        valueFrom:
-                          fieldRef:
-                            fieldPath: metadata.namespace
                     command:
                       - python3
-                      - /wp-cron.py
+                      - /sitemap.py
                     resources:
                       requests:
                         cpu: '{{ _cpu_request }}'
@@ -50,3 +45,31 @@
     _wp_cron_tag: >-
       {{ "prod" if inventory_deployment_stage == "production"
       else "latest" }}
+
+- name: Sitemap - Route
+  kubernetes.core.k8s:
+    definition:
+      apiVersion: v1
+      kind: Route
+      metadata:
+        name: sitemap
+        namespace: '{{ inventory_namespace }}'
+        labels:
+          app: sitemap
+          route: public
+      spec:
+        host: '{{ _wp_host_base_url }}'
+        path: "/sitemap.xml"
+        to:
+          kind: Service
+          name: apache-redirector
+          weight: 100
+        port:
+          targetPort: '80'
+        tls:
+          termination: edge
+        wildcardPolicy: None
+  vars:
+    _wp_host_base_url: >-
+      {{ "www.epfl.ch" if inventory_deployment_stage == "production"
+      else "wpn-test.epfl.ch" }}
