--- a/ansible/roles/wordpress-namespace/vars/mariadb-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/mariadb-vars.yml
@@ -3,3 +3,4 @@ mariadb_name: mariadb
 mariadb_storage_class: wordpress-nfs-db
 number_of_mariadb: 5
 _db_index_name: wp-db-index
+_fleet_name: wp-fleet
