--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -240,3 +240,57 @@
         mariaDbRef:
           name: "{{ mariadb_name }}-fleet"
           waitForIt: true
+
+- name: "Secret/{{ _fleet_name }}"
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      type: Opaque
+      metadata:
+        name: "{{ _fleet_name }}"
+        namespace: "{{ inventory_namespace }}"
+      data:
+        password: "{{ _fleet_db_password | b64encode }}"
+
+- name: "User/{{ _fleet_name }}"
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: k8s.mariadb.com/v1alpha1
+      kind: User
+      metadata:
+        name: "{{ _fleet_name }}"
+        namespace: "{{ inventory_namespace }}"
+      spec:
+        cleanupPolicy: Delete
+        host: '%'
+        mariaDbRef:
+          name: "{{ mariadb_name }}-fleet"
+          waitForIt: true
+        maxUserConnections: 10
+        passwordSecretKeyRef:
+          key: password
+          name: "{{ _fleet_name }}"
+
+- name: "Grant/{{ _fleet_name }}"
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: k8s.mariadb.com/v1alpha1
+      kind: Grant
+      metadata:
+        name: "{{ _fleet_name }}"
+        namespace: "{{ inventory_namespace }}"
+      spec:
+        database: "{{ _fleet_name }}"
+        grantOption: false
+        host: '%'
+        mariaDbRef:
+          name: "{{ mariadb_name }}-fleet"
+          waitForIt: true
+        privileges:
+          - ALL PRIVILEGES
+        table: '*'
+        username: "{{ _fleet_name }}"
