[feature] Add sitemap.xml to nginx configuration

--- a/docker/wordpress-nginx/wordpress_fastcgi.conf
+++ b/docker/wordpress-nginx/wordpress_fastcgi.conf
@@ -28,3 +28,6 @@ location ~ ^[^.]*$ {
 location ~ \.php$ {
   fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
 }
+location ~ (^|/)sitemap\.xml$ {
+  fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+}
