[feature] Copy the pullsecret in a directory for the build

--- a/ansible/roles/olm-catalog/tasks/isas-fsd-catalog.yml
+++ b/ansible/roles/olm-catalog/tasks/isas-fsd-catalog.yml
@@ -13,6 +13,10 @@
           git:
             ref: "main"
             uri: "{{ isas_fsd_catalog_git_uri }}"
+          secrets:
+            - secret:
+                name: "{{ quay_puller_secret_name }}"
+              destinationDir: "pullSecret"
         strategy:
           type: Docker
           dockerStrategy:
