--- a/ansible/inventory/test/wordpress_namespaces.yml
+++ b/ansible/inventory/test/wordpress_namespaces.yml
@@ -32,3 +32,14 @@ all_namespaces:
               inventory_openshift:
                 domain: okd-test.fsd.team
                 insecure: true
+        olm_controller_openshift_namespaces:
+          "hosts":
+            namespace/openshift-operators-okd:
+              inventory_namespace: openshift-operators
+              inventory_openshift:
+                domain: okd-test.fsd.team
+                insecure: true
+            namespace/fsd-operators-test:
+              inventory_namespace: fsd-operators
+              inventory_openshift:
+                domain: ocpitst0001.xaas.epfl.ch
