[fix] No more anonymous proxy

--- a/ansible/roles/wordpress-namespace/tasks/wp-operator.yml
+++ b/ansible/roles/wordpress-namespace/tasks/wp-operator.yml
@@ -79,4 +79,4 @@
       patch:
        - op: replace
          path: /spec/template/spec/containers/0/image
-         value: anonymous.apps.t-ocp-its-01.xaas.epfl.ch/svc0041/wp-operator:prod
+         value: quay-its.epfl.ch/svc0041/wp-operator:prod
