--- a/ansible/inventory/test/wordpress_namespaces.yml
+++ b/ansible/inventory/test/wordpress_namespaces.yml
@@ -7,22 +7,24 @@ all_namespaces:
   children:
     openshift_namespaces:
       children:
-        openshift_namespaces_test:
-          vars:
-            inventory_deployment_stage: test
-          "hosts":   # Not real hosts, hence the scarequotes
-            namespace/svc0041t-wordpress:
-              inventory_namespace: svc0041t-wordpress
-              inventory_has_olm_catalog_build: true
-              inventory_openshift:
-                domain: ocpitst0001.xaas.epfl.ch
-            namespace/wordpress-test-in-okd:
-              inventory_namespace: wordpress-test
-              inventory_has_cluster_admin: True
-              inventory_has_only_one_worker_node: True
-              inventory_openshift:
-                domain: okd-test.fsd.team
-                insecure: true
+        wp_namespaces:
+          children:
+            wp_namespaces_test:
+              vars:
+                inventory_deployment_stage: test
+              "hosts":   # Not real hosts, hence the scarequotes
+                namespace/svc0041t-wordpress:
+                  inventory_namespace: svc0041t-wordpress
+                  inventory_has_olm_catalog_build: true
+                  inventory_openshift:
+                    domain: ocpitst0001.xaas.epfl.ch
+                namespace/wordpress-test-in-okd:
+                  inventory_namespace: wordpress-test
+                  inventory_has_cluster_admin: True
+                  inventory_has_only_one_worker_node: True
+                  inventory_openshift:
+                    domain: okd-test.fsd.team
+                    insecure: true
         olm_catalog_openshift_namespaces:
           vars:
             inventory_has_olm_catalog: true
