--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -130,7 +130,7 @@
 
 - name: Cloudflare Settings
   when: >-
-    "openshift_namespaces_prod" in group_names
+    "wp_namespaces_prod" in group_names
   include_tasks:
     file: cloudflare-settings.yml
     apply:
