[fix] Do not consider mariadb-fleet and mariadb-restore for placing DB

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -44,6 +44,8 @@
       metadata:
         name: "{{ mariadb_name }}-{{ '%02d' | format(item|int) }}"
         namespace: "{{ inventory_namespace }}"
+        labels:
+          wpAutoallocate: 'true'
       spec:
         storage:
           size: 1Gi
