[fix] We don't need wp-fleet DB in mariadb-restore
WP-Veritas already send in the CR everything the operator needs

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -232,25 +232,20 @@
               enabled: true
 
 - name: "Database/{{ _fleet_name }}"
-  with_items:
-    - fleet
-    - restore
   kubernetes.core.k8s:
     state: present
     definition:
       apiVersion: k8s.mariadb.com/v1alpha1
       kind: Database
       metadata:
-        name: >-
-          {{ "wp-fleet" if item == "fleet"
-          else "wp-fleet-restore" }}
+        name: "{{ _fleet_name }}"
         namespace: "{{ inventory_namespace }}"
       spec:
         name: "{{ _fleet_name }}"
         characterSet: utf8mb4
         collate: utf8mb4_unicode_ci
         mariaDbRef:
-          name: "{{ mariadb_name }}-{{ item }}"
+          name: "{{ mariadb_name }}-fleet"
           waitForIt: true
 
 - name: "Secret/{{ _fleet_name }}"
@@ -267,22 +262,19 @@
         password: "{{ _fleet_db_password | b64encode }}"
 
 - name: "User/{{ _fleet_name }}"
-  with_items:
-    - fleet
-    - restore
   kubernetes.core.k8s:
     state: present
     definition:
       apiVersion: k8s.mariadb.com/v1alpha1
       kind: User
       metadata:
-        name: "wp-{{ item }}"
+        name: "{{ _fleet_name }}"
         namespace: "{{ inventory_namespace }}"
       spec:
         cleanupPolicy: Delete
         host: '%'
         mariaDbRef:
-          name: "{{ mariadb_name }}-{{ item }}"
+          name: "{{ mariadb_name }}-fleet"
           waitForIt: true
         maxUserConnections: 10
         passwordSecretKeyRef:
@@ -290,25 +282,22 @@
           name: "{{ _fleet_name }}"
 
 - name: "Grant/{{ _fleet_name }}"
-  with_items:
-    - fleet
-    - restore
   kubernetes.core.k8s:
     state: present
     definition:
       apiVersion: k8s.mariadb.com/v1alpha1
       kind: Grant
       metadata:
-        name: "wp-{{ item }}"
+        name: "{{ _fleet_name }}"
         namespace: "{{ inventory_namespace }}"
       spec:
         database: "{{ _fleet_name }}"
         grantOption: false
         host: '%'
         mariaDbRef:
-          name: "{{ mariadb_name }}-{{ item }}"
+          name: "{{ mariadb_name }}-fleet"
           waitForIt: true
         privileges:
           - ALL PRIVILEGES
         table: '*'
-        username: "wp-{{ item }}"
+        username: "{{ _fleet_name }}"
