--- a/ansible/roles/wordpress-namespace/tasks/storage.yml
+++ b/ansible/roles/wordpress-namespace/tasks/storage.yml
@@ -80,7 +80,7 @@
       apiVersion: v1
       kind: PersistentVolume
       metadata:
-        name: wordpress-data-prod
+        name: wordpress-data-prod-ro
       spec:
         accessModes:
           - ReadOnlyMany
@@ -110,6 +110,7 @@
       spec:
         accessModes:
           - ReadOnlyMany
+        storageClassName: ""
         resources:
           requests:
             storage: 1Gi
