[feature] Add wp-fleet cronjob

--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -119,6 +119,17 @@
     - wp
     - wp.cron
 
+- name: "wp-fleet"
+  include_tasks:
+    file: wp-fleet.yml
+    apply:
+      tags:
+        - wp
+        - wp.fleet
+  tags:
+    - wp
+    - wp.fleet
+
 - name: "WordPress operator"
   include_tasks:
     file: wp-operator.yml
