[revert] The sitemap generation is up to the start method of the menu-api container and to the menu refresh

--- a/docker/wp-cron/Dockerfile
+++ b/docker/wp-cron/Dockerfile
@@ -31,4 +31,4 @@ RUN pip3 install -r ./requirements.txt --break-system-packages
 COPY --from=quay-its.epfl.ch/svc0041/wp-base:rc /wp /wp
 COPY --from=quay-its.epfl.ch/svc0041/wp-base:rc /usr/local/bin/wp /usr/local/bin/wp
 
-ADD wp-cron.py wordpresses.py pushgateway.py sitemap.py /
+ADD wp-cron.py wordpresses.py pushgateway.py /
