[feature] Refresh menu-api for the new restored site

--- a/ansible/roles/wordpress-namespace/tasks/wp-operator.yml
+++ b/ansible/roles/wordpress-namespace/tasks/wp-operator.yml
@@ -22,6 +22,7 @@
         namespace: "{{ inventory_namespace }}"
       data:
         MARIADB-RESTORE: "{{ mariadb_name }}-restore"
+        MENU_API_HOST: "menu-api"
 
 - name: Pull secret for the OLM operator
   kubernetes.core.k8s:
