--- a/ansible/roles/wordpress-namespace/tasks/wp-fleet.yml
+++ b/ansible/roles/wordpress-namespace/tasks/wp-fleet.yml
@@ -32,6 +32,13 @@
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
+                      - name: MARIADB_HOST
+                        value: "mariadb-fleet"
+                      - name: MARIADB_PASSWORD
+                        valueFrom:
+                          secretKeyRef:
+                            key: password
+                            name: wp-fleet
                     command:
                       - python3
                       - /wp-fleet.py
